
\subsection{NEW FEATURES}{
  \itemize{
    \item New one-parameter power-law kernel \code{siaf.powerlaw1()}
    with fixed \code{sigma = 1}. Useful if \code{sigma} is difficult to
    estimate with \code{siaf.powerlaw()}.
  }
}

\subsection{BUG FIXES}{
  \itemize{
    \item \code{pit()}'s default \code{ylab} was wrong (default are
    densities not relative frequencies).
  }
}

}


\section{Changes in surveillance version 1.17.0 (2019-02-22)}{

\subsection{NEW FEATURES}{
  \itemize{
    \item \code{W_powerlaw(..., from0 = TRUE)} enables more parsimonious
    \code{hhh4} models in that the power-law weights are modified to
    include the autoregressive (0-distance) case (see
    \code{vignette("hhh4_spacetime")}). The unstructured distance
    weights \code{W_np()} gained \code{from0} support as well.

    \item \code{sts()} creation can now handle \code{epoch} arguments of
    class \code{Date} directly.

    \item The \code{ranef()}-method for \code{"hhh4"} fits gained a
    logical argument \code{intercept} to extract the unit-specific
    intercepts of the log-linear predictors instead of the default
    zero-mean deviations around the fixed intercepts.
    The corresponding \code{plot} method (\code{type="ri"}) gained an
    argument \code{exp}: if set to \code{TRUE} random effects are
    \code{exp}-transformed and thus show multiplicative effects.
    [based on feedback by Tim Pollington]
  }
}

\subsection{MINOR CHANGES}{
  \itemize{
    \item \code{W_np()}'s argument \code{to0} has been renamed to
    \code{truncate}. The old name still works but is deprecated.

    \item \code{plotHHH4_ri()} now uses \code{cm.colors(100)} as
    \code{col.regions}, and 0-centered color breaks by default.

    \item The help pages of \code{twinSIR()} and related functions now
    give examples based on \code{data("hagelloch")} instead of using the
    toy dataset \code{data("fooepidata")}. The latter is now obsolete and