@@ -12,7 +12,7 @@
 #======================================================================
 
 #Open
-26/06/2019 rename or remove hcl.colors due to new grDevices::hcl.colors
+
 
 #Done
 15/02/2019 remove deprecated functions
