@@ -114,7 +114,6 @@ export(checkResidualProcess)       # for twinstim and twinSIR
 export(qlomax)                     # quantile function of the Lomax distribution
 export(plapply)
 export(clapply)
-export(hcl.colors)
 export(fanplot)
 
 # spatial utilities
